--- a/foundry.toml
+++ b/foundry.toml
@@ -5,3 +5,7 @@ libs = ['lib']
 solc = "0.8.10"
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
+
+[dependencies]
+solmate = "6.7.0"
+forge-std = "1.9.2"
